cartridge views now class-based

--- a/polls/templates/polls/cartridge_detail.html
+++ b/polls/templates/polls/cartridge_detail.html
@@ -22,5 +22,5 @@
     </tbody>
 </table>
 
-<a href="{% url 'cartridges_list' %}"> Список картриджей </a>
+<a href="{% url 'cartridge_list' %}"> Список картриджей </a>
 {% endblock %}
