--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -10,7 +10,13 @@
 </head>
 <body>
     <div id='content'>
-        {% block content %} {% endblock %}
+        {% block content %} 
+        <h1> Это стартовая страница polls журнала оргтехники УГМС по ЛНР </h1>
+        Доступные страницы:
+        <ul>
+            <li><a href="{% url 'cartridge_list' %}"> Список картриджей </a><li>
+        </ul>
+        {% endblock %}
     </div>
 </body>
 </html>
