--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -14,7 +14,7 @@
         <h1> Это стартовая страница polls журнала оргтехники УГМС по ЛНР </h1>
         Доступные страницы:
         <ul>
-            <li><a href="{% url 'cartridge_list' %}"> Список картриджей </a><li>
+            <li><a href="{% url 'cartridge_list' %}"> Список картриджей </a></li>
         </ul>
         {% endblock %}
     </div>
