--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -1,22 +1,5 @@
-{% load static %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'polls/master.css' %}">
-    <title> {% block title %} Журнал оргтехники УГМС по ЛНР {% endblock %}</title>
-</head>
-<body>
-    <div id='content'>
-        {% block content %} 
-        <h1> Это стартовая страница polls журнала оргтехники УГМС по ЛНР </h1>
-        Доступные страницы:
-        <ul>
-            <li><a href="{% url 'cartridge_list' %}"> Список картриджей </a></li>
-        </ul>
-        {% endblock %}
-    </div>
-</body>
-</html>
+{% block content %}
+Главная страница сайта
+{% endblock %}
