--- a/polls/static/polls/master.css
+++ b/polls/static/polls/master.css
@@ -1177,3 +1177,17 @@ a.deletelink:focus, a.deletelink:hover {
     color: var(--body-fg);
     background-color: var(--body-bg);
 }
+
+/* clickable table row */
+.rowlink, .rowlink:focus {
+    text-decoration: none   ;
+}
+
+.rowlink::before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 1.5em;
+}
