--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'polls/master.css' %}">
     <link rel="stylesheet" href="{% static 'polls/dark-mode.css' %}">
+    <link rel="stylesheet" href="{% static 'polls/forms.css' %}">
     {% block head %} {% endblock %}
     <title> {% block title %} Журнал оргтехники УГМС по ЛНР {% endblock %}</title>
 </head>
