--- a/polls/static/polls/forms.css
+++ b/polls/static/polls/forms.css
@@ -511,27 +511,48 @@ form .related-widget-wrapper ul {
 }
 
 /* tabled forms */
-#form-container .object-form td {
-    text-align: center;
-}
-
-#submit-row input {
-    margin: 0 .5em;
-}
-
-#table-forms-container #submit-row {
+#submit-row {
+    position: sticky;
+    top: 0em;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    flex-wrap: nowrap;
+    flex-direction: row;
     padding-top: 3em;
+    background: var(--body-bg);
 }
-#table-forms-container #submit-row input {
-    float: left;
+
+.tabled-forms caption {
+    font-size: 2em;
+    position: sticky;
+    top: 2.9em;
+    background: var(--body-bg);
 }
-#table-forms-container #submit-row input[type=submit] {
-    float: right;
+
+.tabled-forms thead {
+    position: sticky;
+    top: 8.45em;
+    background: var(--body-bg);
+}
+
+.tabled-forms thead tr td {
+    padding: 1em;
+}
+
+#submit-row input:last-child {
+    margin-left: auto;
 }
 
 input[type=submit].delete-button {
     background: var(--delete-button-bg);
 }
+
 input[type=submit].delete-button:hover {
     background: var(--delete-button-hover-bg);
+}
+
+#forms-container .object-form td {
+    text-align: center;
 }
