--- a/polls/templates/polls/edit_objects.html
+++ b/polls/templates/polls/edit_objects.html
@@ -10,7 +10,7 @@
 <form action="" method="post">
     {% csrf_token %}
     <div id="table-forms-container">
-        <div id="submit-row">
+        <div id="submit-row" class="sticked-top">
             <input type="reset" value="Сбросить">
             <input type="submit" value="Удалить отмеченые" formaction="delete" class='delete-button'>            
             <input type="submit" value="Изменить данные">
