--- a/polls/templates/polls/add_objects.html
+++ b/polls/templates/polls/add_objects.html
@@ -10,7 +10,7 @@
 <form action="" method="post">
     {% csrf_token %}
     <div id="table-forms-container">
-        <div id='submit-row' class="sticked-top">
+        <div id="submit-row">
             <input id="add-form" type="button" value="Добавить еще одну строку">
             <input id="submit-forms" type="submit" value="Добавить объекты в Базу Данных">
         </div>
