--- a/polls/templates/polls/edit_objects.html
+++ b/polls/templates/polls/edit_objects.html
@@ -10,9 +10,9 @@
 <form action="" method="post">
     {% csrf_token %}
     <div id="table-forms-container">
-        <div id="submit-row" class="sticked-top">
+        <div id="submit-row">
             <input type="reset" value="Сбросить">
-            <input type="submit" value="Удалить отмеченые" formaction="delete" class='delete-button'>            
+            <input type="submit" value="Удалить отмеченые" formaction="delete" class="delete-button">            
             <input type="submit" value="Изменить данные">
         </div>
         {% include "polls/forms_to_table.html" with deletion_flag=True %}
