--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@
 <h1> Вход в аккаунт </h1>
 {% endblock %}
 
-{% block content %}
+{% block main %}
     {% if form.errors %}
         <p>Неправильное имя пользователя или пароль.</p>
     {% endif %}
