--- a/polls/templates/polls/edit_objects.html
+++ b/polls/templates/polls/edit_objects.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+{% extends "polls/base.html" %}
 
 {% load static %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'polls/forms.css' %}">
 {% endblock %}
+
+{% block title %}  {% endblock %}
 
 {% block content %}
 
