--- a/polls/templates/polls/aside.html
+++ b/polls/templates/polls/aside.html
@@ -6,8 +6,8 @@
             {% for table_name, hrefs in tables.items %}
             <tr> 
                 <th> {{ table_name }} </th> 
-                <td> <a class="addlink" href="/{{ hrefs.add }}"> Добавить </a> </td>
-                <td> <a class="changelink" href="/{{ hrefs.edit }}"> Изменить </a> </td>
+                <td> <a class="addlink" href="{{ hrefs.add }}"> Добавить </a> </td>
+                <td> <a class="changelink" href="{{ hrefs.edit }}"> Изменить </a> </td>
             </tr>
             {% endfor %}
         </tbody>
