--- a/polls/templates/polls/aside.html
+++ b/polls/templates/polls/aside.html
@@ -3,11 +3,9 @@
     <table class="module">
         <caption> Таблицы </caption>
         <tbody>
-            {% for table_name, hrefs in tables.items %}
+            {% for table_name, href in tables.items %}
             <tr> 
-                <th> {{ table_name }} </th> 
-                <td> <a class="addlink" href="{{ hrefs.add }}"> Добавить </a> </td>
-                <td> <a class="changelink" href="{{ hrefs.edit }}"> Изменить </a> </td>
+                <th> <a href="{{ href }}"> {{ table_name }} </a> </th> 
             </tr>
             {% endfor %}
         </tbody>
