request todo view created

--- a/polls/static/polls/forms.css
+++ b/polls/static/polls/forms.css
@@ -559,3 +559,7 @@ input[type=submit].delete-button:hover {
 .object-form td textarea {
     resize: vertical;
 }
+
+#delete-button {
+    margin-right: .3em;
+}
