nav sidebar fix

--- a/polls/templates/polls/aside.html
+++ b/polls/templates/polls/aside.html
@@ -3,7 +3,7 @@
     <table class="module">
         <caption> Модерация таблиц </caption>
         <tbody>
-            {% for table_name, href in tables.items %}
+            {% for table_name, href in nav_sidebar_tables.items %}
             <tr> 
                 <th> <a href="{{ href }}"> {{ table_name }} </a> </th> 
             </tr>
