login page fix; redirections on auth

--- a/polls/templates/polls/request_form.html
+++ b/polls/templates/polls/request_form.html
@@ -1,7 +1,9 @@
 {% extends "polls/base_form.html" %}
 
-{% block content %}
+{% block title %} Создать запрос {% endblock %}
 
+{% block content %}
+<h1 style="text-align: center;"> Создать запрос </h1>
 <div>
     <form action="" method="POST">
         {% csrf_token %}
