--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,25 +13,31 @@
 {% endblock %}
 
 {% block main %}
-    {% if form.errors %}
-        <p>Неправильное имя пользователя или пароль.</p>
-    {% endif %}
+<main id="content-start" class="content">
+    <div id="content">
+        <div id="content-main">
+            {% if form.errors %}
+            <p>Неправильное имя пользователя или пароль.</p>
+            {% endif %}
 
-    <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class='form-row'>        
-            {{ form.username.label_tag }}
-            {{ form.username }}
+            <form method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class='form-row'>        
+                    {{ form.username.label_tag }}
+                    {{ form.username }}
+                </div>
+                <div class='form-row'>                
+                    {{ form.password.label_tag }}
+                    {{ form.password }}
+                </div>
+                <div class='submit-row'>
+                    <input type="submit" value="Войти">
+                </div>
+                <input type="hidden" name="next" value="{{ next }}">
+            </form>
         </div>
-        <div class='form-row'>                
-            {{ form.password.label_tag }}
-            {{ form.password }}
-        </div>
-        <div class='submit-row'>
-            <input type="submit" value="Войти">
-        </div>
-        <input type="hidden" name="next" value="{{ next }}">
-    </form>
+    </div>
+</main>
 {% endblock %}
 
 {% block footer %}
