--- a/polls/templates/polls/aside.html
+++ b/polls/templates/polls/aside.html
@@ -1,21 +1,41 @@
 <button id="toggle-nav-side-bar" class="sticky toggle-nav-sidebar"> </button>
 <nav id="nav-sidebar" class="sticky">
     <table class="module">
-        <caption> Модерация таблиц </caption>
         <tbody>
             {% for table_name, href in nav_sidebar_tables.items %}
-            <tr> 
-                <th> <a href="{{ href }}"> {{ table_name }} </a> </th> 
+            <tr class="clickable-row" data-href="{{ href }}"> 
+                <th> {{ table_name }} </th> 
             </tr>
             {% endfor %}
         </tbody>
     </table>
     <table class='module'>
-        <caption> Рабочая область </caption>
         <tbody>
-            <tr>
-                <th> <a href="{% url 'request-todo' %}"> Запросы </a></th>
+            <tr class="clickable-row" data-href="{% url 'request-todo' %}"> 
+                <th> Активные запросы </th> 
             </tr>
         </tbody>
     </table>
+    <script>
+        jQuery(document).ready(function($) {
+            $(".clickable-row").click(function() {
+                window.location = $(this).data("href");
+            });
+        });
+    </script>
+    <style>
+        .clickable-row {
+            cursor: pointer;
+        }
+        #nav-sidebar tr:nth-child(odd).clickable-row:hover {
+            background: #000000;
+        }
+        #nav-sidebar tr:nth-child(even).clickable-row:hover {
+            background: #181818;
+        }
+        #nav-sidebar tr:nth-child(odd),
+        #nav-sidebar  tr:nth-child(even) {
+            background: #417690;
+        }
+    </style>
 </nav>
