--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -34,6 +34,7 @@
                     <input type="submit" value="Войти">
                 </div>
                 <input type="hidden" name="next" value="{{ next }}">
+                <br class="clear">
             </form>
         </div>
     </div>
